--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "@material-ui/core": "^3.9.3",
+    "google-map-react": "^1.1.4",
     "next": "^8.1.0",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "styled-components": "^4.2.0"
   }
 }
