--- a/package.json
+++ b/package.json
@@ -12,16 +12,17 @@
   "license": "ISC",
   "dependencies": {
     "@material-ui/core": "3.9.3",
+    "axios": "0.18.0",
+    "body-parser": "1.18.2",
+    "dotenv": "7.0.0",
+    "express": "4.16.3",
     "google-map-react": "1.1.4",
+    "mongoose": "5.0.17",
+    "multer": "1.3.0",
     "next": "8.1.0",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "styled-components": "4.2.0",
-    "axios": "0.18.0",
-    "body-parser": "1.18.2",
-    "express": "4.16.3",
-    "mongoose": "5.0.17",
-    "multer": "1.3.0",
     "uuid": "3.2.1"
   }
 }
